Eksport statistikk per kategori (land og virksomhet) (#324)
* Opprettholde eksisterende batch (topic arbeidsgiver.sykefravarsstatistikk-v1)
* Nytt domeneobjekt SykefraværFlereKvartalerForEksport som inneholder både sykefraværsprosent over de siste tilgjengelige 4 kvartalene og liste av de kvartalene som er tilgjengelige
* Ny regel for maskering av prosent over siste 4 kvartal, nemlig: prosent skal være maskert dersom alle siste 4 kvartalene er maskert. Dersom det ikke er noe data tilgjengelig skal prosent være "ikke maskert"
* "Semantisk" forbedring for maskering av prosent siste kvartal: dersom det ikke er noe data tilgjengelig skal prosent være "ikke maskert"
* Eksportering av siste 4 kvartal for statistikk kategori Land -> ny topic arbeidsgiver.sykefravarsstatistikk-land-v1
* Eksportering av siste 4 kvartal for statistikk kategori Virksomhet -> ny topic arbeidsgiver.sykefravarsstatistikk-virksomhet-v1
* Features for eksportering batch (trigges manuelt): mulighet for å eksportere et vis antall virksomheter, logge progresjon hver 10.000 meldinger, skrive meldinger som har blitt eksportert i DB (historikk til feilsøking), mulighet for å slette historikk

Co-authored-by: Malaz Alkoj <malaz.alkoj@nav.no>
Co-authored-by: Tharald Stray <tharald.jorgen.bachke.stray@nav.no>